--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,6 +10,8 @@
         rel="stylesheet" 
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
         crossorigin="anonymous">
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/5f01360d86.js" crossorigin="anonymous"></script>
     <!-- Custom CSS-->
     {% block customCSS %}
     {% endblock %}
