--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -71,18 +71,33 @@
 {%if users%}
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-4">
-        <table class="table table-bordered">
-          <thead class="thead-dark">
-            <th scope="col">Id</th>
+        <table class="table table-hover mt-2" id = "users">
+          <thead>
+            <th scope="col">ID</th>
             <th scope="col">Username</th>
             <th scope="col">Rol</th>
           </thead>
           <tbody>
             {%for user in users%}
             <tr>
-              <th scope="row">{{user.id}}</th>
-              <td>{{user.username}}</td>
-              <td>{{user.isAdmin}}</td>
+              <form action="/admin/update" method="POST" id="update-form">
+                <th scope="row">{{user.id}}</th>
+                <td type="username" id="username">{{user.username}}</td>
+                <input type="hidden" id="ID" name="ID">
+                <input type="hidden" id="rol" name="rol">
+                <td>
+                  <div class="dropdown">
+                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{user.isAdmin}}
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li type="submit" onclick="handleClick(0);" method = 'POST'><a class="dropdown-item" href="#">0</a></li>
+                      <li type="submit" onclick="handleClick(1);" method = 'POST'><a class="dropdown-item" href="#">1</a></li>
+                    </ul>
+                  </div>
+                </td>
+              </form>
+                
             </tr>
             {%endfor%}
           </tbody>
@@ -94,3 +109,5 @@
 
 
 {% endblock %}
+
+
