Arregla un error en el head

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -7,6 +7,22 @@
 {% endblock %}
 
 {% block body %}
+<script>
+  async function handleClick(nuevo_rol) {
+      var table = document.getElementById('users')
+      var tbody = table.getElementsByTagName('tbody')[0]
+      var rows = tbody.getElementsByTagName('tr');
+      for (i = 0; i < rows.length; i++) {
+          rows[i].onclick = function() {
+          console.log(this.rowIndex)
+          document.querySelector('input[name="ID"]').value = this.rowIndex;
+          document.querySelector('input[name="rol"]').value = nuevo_rol;
+          document.getElementById('update-form').submit();
+          }
+      }
+  }
+</script>
+
 <h2 class="mb-3">Perfiles de Usuarios</h2>
 {% with messages = get_flashed_messages()%}
 
