--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -45,3 +45,46 @@ body {
   text-align: left !important;
 }
 
+.drop{
+  padding: 4px !important;
+}
+
+.drop-btn{
+  padding: 4px 8px !important;
+}
+
+
+.cont{
+  display: flex;
+  flex: 0 0 auto;
+  justify-content: center;
+  padding: 0px;
+  margin: -5px;
+}
+
+.edit{
+  display: flex;
+  flex: 0 0 auto;
+  width: 40%;
+  justify-content: center;
+  padding: 10px 7px;
+  border-radius: 40rem;
+}
+
+.trash{
+  margin-left: 3.5px;
+
+}
+.trash:hover {
+  background-color: rgb(215, 70, 70);
+  color: rgb(255, 181, 181);
+}
+
+.pencil{
+  margin-right: 3.5px;
+}
+
+.pencil:hover{
+  background-color: rgb(120, 120, 120);
+  color: rgb(225, 225, 225)
+}
