--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -8,18 +8,19 @@
 
 {% block body %}
 <script>
-  async function handleClick(nuevo_rol) {
-      var table = document.getElementById('users')
-      var tbody = table.getElementsByTagName('tbody')[0]
-      var rows = tbody.getElementsByTagName('tr');
-      for (i = 0; i < rows.length; i++) {
-          rows[i].onclick = function() {
-          console.log(this.rowIndex)
-          document.querySelector('input[name="ID"]').value = this.rowIndex;
-          document.querySelector('input[name="rol"]').value = nuevo_rol;
-          document.getElementById('update-form').submit();
-          }
+
+  function handleRole(nuevo_rol){
+    var table = document.getElementById('users');
+    var tbody = table.getElementsByTagName('tbody')[0];
+    var rows = tbody.getElementsByTagName('tr');
+    for (i = 0; i < rows.length; i++){
+      rows[i].onclick = function() {
+        var id = this.cells[0].innerHTML
+        document.querySelector('input[name="ID"]').value = id;
+        document.querySelector('input[name="rol"]').value = nuevo_rol;
+        document.getElementsByTagName('form')[1].submit(); 
       }
+    }
   }
 </script>
 
@@ -87,34 +88,47 @@
 {%if users%}
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-4">
-        <table class="table table-hover mt-2" id = "users">
+        <table class="table mt-2 table-hover" id = "users">
           <thead>
             <th scope="col">ID</th>
             <th scope="col">Username</th>
             <th scope="col">Rol</th>
+            <th scope="col">Actions</th>
           </thead>
           <tbody>
             {%for user in users%}
-            <tr>
-              <form action="/admin/update" method="POST" id="update-form">
-                <th scope="row">{{user.id}}</th>
-                <td type="username" id="username">{{user.username}}</td>
-                <input type="hidden" id="ID" name="ID">
-                <input type="hidden" id="rol" name="rol">
-                <td>
+            <tr class=" deleteOut tdEdit">
+              <form action="/admin/update" method="POST"  >
+                <th scope="row" id="{{user.id}}">{{user.id}}</th>
+                <td class="table-light tdEdit" type="username" id="username">{{user.username}}</td>
+                <input type="hidden" name="ID">
+                <input type="hidden" name="rol">
+                <td class="table-light drop tdEdit">
                   <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-light dropdown-toggle drop-btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       {{user.isAdmin}}
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li type="submit" onclick="handleClick(0);" method = 'POST'><a class="dropdown-item" href="#">0</a></li>
-                      <li type="submit" onclick="handleClick(1);" method = 'POST'><a class="dropdown-item" href="#">1</a></li>
+                      <li type="submit" onclick="handleRole(0);">
+                        <a class="dropdown-item">0</a>
+                      </li>
+                      <li type="submit" onclick="handleRole(1);">
+                        <a class="dropdown-item">1</a>
+                      </li>
                     </ul>
                   </div>
                 </td>
+                <td>
+                  <div class="cont">
+                    <div role="button" class="edit pencil">
+                      <i class="fa-solid fa-pencil"></i>
+                    </div>
+                    <div role="button" class="edit trash">
+                      <i class="fa-solid fa-trash"></i>
+                    </div>
+                  </div>
+                </td>
               </form>
-                
-            </tr>
             {%endfor%}
           </tbody>
         </table>
