--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -17,10 +17,31 @@
       rows[i].onclick = function() {
         var id = this.cells[0].innerHTML
         document.querySelector('input[name="ID"]').value = id;
-        document.querySelector('input[name="rol"]').value = nuevo_rol;
+        document.querySelector('input[name="role"]').value = nuevo_rol;
         document.getElementsByTagName('form')[1].submit(); 
       }
     }
+  }
+
+  function handleDelete(){
+    var table = document.getElementById('users');
+    var tbody = table.getElementsByTagName('tbody')[0];
+    var rows = tbody.getElementsByTagName('tr');
+    for (i = 0; i < rows.length; i++){
+      rows[i].onclick = function() {
+        var id = this.cells[0].innerHTML
+        document.querySelector('input[name="id"]').value = id;
+        console.log(document.querySelector('form[name="ID"]'))
+        document.querySelector('form[name="ID"]').submit();
+        //document.getElementsByTagName('form')[1].submit(); 
+      }
+    }
+
+
+    //console.log(document.querySelector('input[name="id"]').value)
+    //console.log(document.querySelector('form[name="ID"]'))
+    //console.log(document.querySelector('form[name="ID"]').value)
+    //document.getElementsByTagName('form')[3].submit();
   }
 </script>
 
@@ -69,12 +90,12 @@
             <label for="floatingPassword">Password</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" id="isAdmin" name="isAdmin" value="0">
-            <label class="form-check-label" for="isAdmin">Usuario normal</label>
+            <input class="form-check-input" type="radio" id="rol" name="rol" value="0">
+            <label class="form-check-label" for="rol">Usuario normal</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="isAdmin" value="1" required="required">
-            <label class="form-check-label" for="isAdmin" required="required">Administrador</label>
+            <input class="form-check-input" type="radio" name="rol" value="1" required="required">
+            <label class="form-check-label" for="rol" required="required">Administrador</label>
         </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -102,11 +123,11 @@
                 <th scope="row" id="{{user.id}}">{{user.id}}</th>
                 <td class="table-light tdEdit" type="username" id="username">{{user.username}}</td>
                 <input type="hidden" name="ID">
-                <input type="hidden" name="rol">
+                <input type="hidden" name="role">
                 <td class="table-light drop tdEdit">
                   <div class="dropdown">
                     <button class="btn btn-light dropdown-toggle drop-btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      {{user.isAdmin}}
+                      {{user.rol}}
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                       <li type="submit" onclick="handleRole(0);">
@@ -118,17 +139,23 @@
                     </ul>
                   </div>
                 </td>
+              </form>
                 <td>
                   <div class="cont">
-                    <div role="button" class="edit pencil">
-                      <i class="fa-solid fa-pencil"></i>
-                    </div>
-                    <div role="button" class="edit trash">
-                      <i class="fa-solid fa-trash"></i>
-                    </div>
+                    <form action="/admin/delete" method="POST" class="edit pencil" role="button" onclick="handleDelete();">
+                      <div>
+                        <i class="fa-solid fa-pencil"></i>
+                      </div>
+                    </form>
+                    <form name="ID" action="/admin/delete" method="POST" class="edit trash" role="button" onclick="handleDelete();">
+                      <input type="hidden" name="id" value="">
+                      <div >
+                        <i class="fa-solid fa-trash"></i>
+                      </div>
+                    </form>
                   </div>
                 </td>
-              </form>
+            </tr>
             {%endfor%}
           </tbody>
         </table>
