--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -68,6 +68,15 @@ form.edit{
   border-radius: 40rem !important;
 }
 
+button.edit{
+  display: flex !important;
+  flex: 0 0 auto !important;
+  width: 40% !important;
+  justify-content: center !important;
+  padding: 6px 7px !important;
+  border-radius: 40rem !important;
+}
+
 .trash{
   margin-left: 3.5px !important;
 
